# ytdb

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  db.py  download.py  handlers.py  logger.py  models.py  queries.py  security.py  tasks.py  validators.py
app/common/: redis.py
app/telegram/: domain.py
app/users/: domain.py  exceptions.py  services.py
app/youtube/: __init__.py  domain.py  download.py  services.py
scripts/: broadcaster.py  whitelister.py
