[tool.poetry]
name = "yt-dlp-tgbot"
version = "0.1.0"
description = "Simple Telegram bot to download YouTube videos"
authors = ["Ilya Chesalin <ilya.chesalin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyrogram = "^2.0.106"
python-dotenv = "^1.0.0"
redis = "^5.0.1"
tgcrypto = "^1.2.5"
tqdm = "4.66.1"
yt-dlp = "^2023.10.7"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
mypy = "^1.5.1"

[tool.black]
line-length = 80
target-version = ['py311']

[tool.isort]
profile = "black"
src_paths = ["app"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
