[tool.poetry]
name = "yt-dlp-tgbot"
version = "0.1.0"
description = "Simple Telegram bot to download YouTube videos"
authors = ["Ilya Chesalin <ilya.chesalin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiosqlite = "^0.20.0"
ffmpeg-python = "^0.2.0"
pydantic = "^2.6.1"
pydantic-settings = "^2.2.1"
pyrogram = "^2.0.106"
python-dotenv = "^1.0.1"
rich = "^13.7.0"
sqlalchemy = "^2.0.27"
tgcrypto = "^1.2.5"
yt-dlp = "^2023.10.7"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.8.0"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
src_paths = ["app"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
